Fix submenu spacing

--- a/assets/sass/39alpha/layout.scss
+++ b/assets/sass/39alpha/layout.scss
@@ -63,14 +63,11 @@
                 & > ul {
                     line-height: $base-line-height;
                     background: $background-color;
-                    // border-left: 1px solid $brand-color;
-                    // border-right: 1px solid $brand-color;
-                    // border-bottom: 1px solid $brand-color;
                     padding: 10px;
                     margin-left: -10px;
                     display: none;
                     position: absolute;
-                    top: 90%;
+                    top: 93%;
                     z-index: 500;
                     text-align: left;
 
